# forge3d-ai

./: .env.example  .gitignore  pyproject.toml  setup.sh  start.sh
.github/workflows/: backend-ci.yml
backend/: README.md  hunyuan_service.py  main.py  main.py.save.1
backend/.ipynb_checkpoints/: main-checkpoint.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  schemas.py
backend/app/core/: config.py  exceptions.py
backend/app/domain/: generation.py  jobs.py
backend/app/engines/: __init__.py  contracts.py  policy.py  registry.py
backend/app/gpu/: __init__.py  lock.py  memory.py
backend/app/hunyuan/: __init__.py  process_manager.py
backend/app/infrastructure/: __init__.py  hunyuan_client.py  hunyuan_gateway.py  job_repository.py  storage.py  subprocess_runner.py
backend/app/middleware/: request_context.py
backend/app/observability/: __init__.py  context.py  logging.py  metrics.py
backend/app/queue/: __init__.py  contracts.py  executor.py  local.py
backend/app/services/: __init__.py  hunyuan.py  triposr.py  upload_validation.py
backend/app/texture/: __init__.py  contracts.py  (+2 more)
backend/docs/: RUNPOD_DEPLOYMENT.md  TEXTURE_PIPELINE.md
backend/patches/: hunyuan_meshrender_mesh_inpaint.patch
backend/scripts/: blender_glb_to_obj.py  blender_obj_to_glb.py  check_services.sh  check_texture_dependencies.sh  compile_hunyuan_mesh_inpaint.sh  diagnose_runpod_proxy.sh  inspect_hunyuan_api.py  inspect_hunyuan_texture.py  run_hunyuan_paint.py  start_forge3d.sh  start_hunyuan.sh  start_hunyuan_texture.sh  start_local.sh  start_runpod.sh  start_web_runpod.sh  test_full_hunyuan_pipeline.py  test_gpu.sh  test_hunyuan_mesh_inpaint.py  test_texture_e2e.py  test_texture_gpu.sh
backend/services/: hunyuan.py  hunyuan_texture_service.py
backend/tests/: test_texture_pipeline.py
frontend/: index.html
web/: .env.example  README.md  next.config.js  package-lock.json  package.json
(+61 files in other folders)
