[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge3d-backend"
version = "0.3.0"
description = "Forge3D AI backend"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
hunyuan = ["gradio-client>=1.3,<2"]
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["backend/tests"]
markers = [
  "gpu: requires live RunPod GPU services and is skipped unless explicitly enabled",
]
