[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge3d-backend"
version = "0.3.0"
description = "Forge3D AI backend"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.9,<1",
  "httpx>=0.27,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
hunyuan = []
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "ruff>=0.11,<1",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["backend/tests"]
markers = [
  "gpu: requires live RunPod GPU services and is skipped unless explicitly enabled",
  "texture_gpu: requires the live Hunyuan Paint pipeline on RunPod",
]

[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = ["backend/main.py.save", "backend/main.py.save.1"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E701", "E702"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
